update baru coy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design for Bootstrap</title>
+    <title>Crystal Chemper Palu</title>
+    
+  <link rel="icon" href="img/logo.png">
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -33,7 +35,7 @@
         <div class="order-lg-last col-lg-5 col-sm-8 col-8">
           <div class="d-flex float-end">
             <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-user-alt m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Sign in</p> </a>
-            <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-shopping-cart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">My cart</p> </a>
+            <a href="cart.html" class="border rounded py-1 px-3 nav-link d-flex align-items-center" > <i class="fas fa-shopping-cart m-1 me-md-2"></i><p class="d-none d-md-block mb-0"></p> </a>
           </div>
         </div>
         <!-- Center elements -->
@@ -41,7 +43,7 @@
         <!-- Right elements -->
         <div class="col-lg-5 col-md-12 col-12">
           <div class="input-group float-center">
-            <div class="form-outline">
+            <div class="form-outline shadow-2">
               <input type="search" id="form1" class="form-control" />
               <label class="form-label" for="form1">Search</label>
             </div>
@@ -450,33 +452,7 @@
 <footer class="text-center text-lg-start bg-light text-muted">
   <!-- Section: Social media -->
   <section class="p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    <div class="container">
-      <div class="row d-flex">
-        <!-- Left -->
-        <div class="col-md-6 col-sm-12 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-          <div class="">
-            <div class="input-group" style="max-width: 400px;">
-              <input type="email" class="form-control border" placeholder="Email" aria-label="Email" aria-describedby="button-addon2" />
-              <button class="btn btn-light border" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-                Subscribe
-              </button>
-            </div>
-          </div>
-        </div>
-        <!-- Left -->
 
-        <!-- Right -->
-        <div class="col-md-6 col-sm-12 float-center">
-          <div class="float-md-end">
-            <a class="btn btn-icon btn-light text-secondary px-3 border" title="Facebook" target="_blank" href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
-            <a class="btn btn-icon btn-light text-secondary px-3 border" title="Instagram" target="_blank" href="#"><i class="fab fa-instagram fa-lg"></i></a>
-            <a class="btn btn-icon btn-light text-secondary px-3 border" title="Youtube" target="_blank" href="#"><i class="fab fa-youtube fa-lg"></i></a>
-            <a class="btn btn-icon btn-light text-secondary px-3 border" title="Twitter" target="_blank" href="#"><i class="fab fa-twitter fa-lg"></i></a>
-          </div>
-        </div>
-        <!-- Right -->
-      </div>
-    </div>
   </section>
   <!-- Section: Social media -->
 
@@ -554,58 +530,6 @@
       <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
-  <div class="container">
-    <div class="py-4 border-top">
-      <div class="d-flex justify-content-between">
-        <!--- payment --->
-        <div class="text-dark">
-          <i class="fab fa-lg fa-cc-visa"></i>
-          <i class="fab fa-lg fa-cc-amex"></i>
-          <i class="fab fa-lg fa-cc-mastercard"></i>
-          <i class="fab fa-lg fa-cc-paypal"></i>
-        </div>
-        <!--- payment --->
-
-        <!--- language selector --->
-        <div class="dropdown dropup">
-          <a class="dropdown-toggle text-dark" href="#" id="Dropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false"> <i class="flag-united-kingdom flag m-0"></i> English </a>
-
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="Dropdown">
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-united-kingdom flag"></i>English <i class="fa fa-check text-success ms-2"></i></a>
-            </li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-poland flag"></i>Polski</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-china flag"></i>中文</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-japan flag"></i>日本語</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-germany flag"></i>Deutsch</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-france flag"></i>Français</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-spain flag"></i>Español</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-russia flag"></i>Русский</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><i class="flag-portugal flag"></i>Português</a>
-            </li>
-          </ul>
-        </div>
-        <!--- language selector --->
-      </div>
-    </div>
-  </div>
 </footer>
 <!-- Footer -->
     <!-- MDB -->
